@@ -35,7 +35,6 @@ import static com.hedera.services.bdd.spec.utilops.UtilVerbs.*;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INVALID_ADMIN_KEY;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.MODIFYING_IMMUTABLE_CONTRACT;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class ContractUpdateSuite extends HapiApiSuite {
@@ -47,22 +46,10 @@ public class ContractUpdateSuite extends HapiApiSuite {
 
 	@Override
 	protected List<HapiApiSpec> getSpecsInSuite() {
-		return allOf(
-				positiveTests(),
-				negativeTests()
-		);
-	}
-
-	private List<HapiApiSpec> positiveTests() {
-		return Arrays.asList(
-				updateWithPendingNewKeySucceeds()
-		);
-	}
-
-	private List<HapiApiSpec> negativeTests() {
-		return Arrays.asList(
-				cannotUpdateToEmptyAdminKey()
-		);
+		return List.of(new HapiApiSpec[]{
+				updateWithPendingNewKeySucceeds(),
+				canSetImmutableWithEmptyKeyList(),
+		});
 	}
 
 	private HapiApiSpec updateWithPendingNewKeySucceeds() {
@@ -81,13 +68,18 @@ public class ContractUpdateSuite extends HapiApiSuite {
 				);
 	}
 
-	private HapiApiSpec cannotUpdateToEmptyAdminKey() {
-		return defaultHapiSpec("DeleteFailsAfterMakingContractImmutable")
+	private HapiApiSpec canSetImmutableWithEmptyKeyList() {
+		return defaultHapiSpec("CanSetImmutableWithEmptyKeyList")
 				.given(
-						contractCreate("mutable")
-				).when().then(
-						contractUpdate("mutable").emptyingAdminKey()
-								.hasKnownStatus(INVALID_ADMIN_KEY)
+						newKeyNamed("pristine"),
+						contractCreate("toBeImmutable")
+				).when(
+						contractUpdate("toBeImmutable").improperlyEmptyingAdminKey()
+								.hasKnownStatus(INVALID_ADMIN_KEY),
+						contractUpdate("toBeImmutable").properlyEmptyingAdminKey()
+				).then(
+						contractUpdate("toBeImmutable").newKey("pristine")
+								.hasKnownStatus(MODIFYING_IMMUTABLE_CONTRACT)
 				);
 	}
 
